Fixed grid overflow and sizing issue

--- a/style.css
+++ b/style.css
@@ -5,22 +5,18 @@
 }
 
 body {
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    overflow: hidden;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .header {
-    height: 20%;
-    flex-shrink: 1;
+    flex: 0 1 20%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,25 +24,22 @@ body {
 }
 
 .bookshelf {
-    flex-grow: 1;
-    height: 100%;
+    flex: 1 0 auto;
     display: grid;
-    grid-template: repeat(auto-fit, minmax(150px, 1fr)) / repeat(6, minmax(150px, 1fr));
-    gap: 10rem 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(min(350px, 100%), 1fr));
+    grid-auto-rows: 400px;
+    gap: 5rem;
     margin: 5rem;
 }
 
 .footer {
-    flex-shrink: 0;
-    height: 5%;
-    height: 10%;
+    flex: 0 1 20%;
     text-align: center;
     padding: 0 5rem;
 }
 
 .book {
     position: relative;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -57,8 +50,10 @@ body {
 
 .delete-btn {
     position: absolute;
-    right: .5rem;
-    top: .5rem;
+    right: 1rem;
+    top: 1rem;
+    height: 24px;
+    width: 24px;
 }
 
 .add-btn {
